# abac-rbac-auth

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
auth/: app.py
auth/features/: utils.py
auth/features/authentication/: commands.py  exc.py  jwt_service.py  password_hashing.py  queries.py
auth/features/authentication/api/: __init__.py
auth/features/authentication/api/v1/: controllers.py
auth/features/authentication/models/: user.py
auth/features/authentication/repos/: jwt_token.py  user.py
auth/infra/: cache_storage.py  data_storage.py
auth/models_registry/: __init__.py
auth/settings/: auth.py  base.py  cache.py  data_storage.py  utils.py
auth/utils/: singleton.py
deploy/dev/: .env-example  docker-compose.yaml
docs/architecture/v1/: Drawing 2025-02-02 14.32.26.excalidraw.md
migrator/: env.py
migrator/versions/: 2a6509f85d16_user_table.py
src/: app.py
src/features/authentication/: commands.py  jwt_handler.py  jwt_service.py  queries.py
src/features/authentication/api/: __init__.py
src/features/authentication/api/v1/: controllers.py  schemas.py
src/features/authentication/models/: user.py
src/features/authentication/repos/: user.py
src/infra/: cache_storage.py  data_storage.py
src/settings/: auth.py  base.py  data_storage.py
src/utils/: singleton.py
